--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mailchimp-api-v3": "^1.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mailchimp-subscribe": "^2.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
